# beyond-dev-ai-kit

./: .gitignore  AGENTS.md  AGENTS.zh-CN.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: intent-router-stress.yml  kit_guardrails.yml
_regression_tmp/: regression_report.md  skills.json.bak
_regression_tmp/phase23_state/: capability_index.json
prompt-dsl-system/: company_profile.yaml
prompt-dsl-system/00_conventions/: COMPLIANCE_MATRIX.md  CONTRACT_COMPATIBILITY_STRATEGY.md  CPP_STYLE_NAMING.md  FACT_BASELINE.md  HONGZHI_COMPANY_CONSTITUTION.md  HONGZHI_TASK_OPERATING_REQUIREMENTS.md  KIT_QUALITY_MODEL.md  MODULE_PROFILE_SPEC.md  PERSONAL_DEV_STANDARD.md  PROJECT_PROFILE_SPEC.md  PROJECT_TECH_STACK_SPEC.md  ROLLBACK_INSTRUCTIONS.md  SKILL_SPEC.md  SQL_COMPAT_STRATEGY.md
prompt-dsl-system/04_ai_pipeline_orchestration/: BASELINE_PIPELINE_SNAPSHOT.json  README.md  pipeline_bpmn_state_audit_testgen.md  pipeline_bugfix_min_scope_with_tree.md  pipeline_db_delivery_batch_and_runbook.md  pipeline_kit_self_upgrade.md  pipeline_module_migration.md  pipeline_ownercommittee_audit_fix.md  pipeline_plugin_discover.md  pipeline_project_bootstrap.md  pipeline_project_stack_bootstrap.md  pipeline_requirement_to_prototype.md  pipeline_skill_creator.md  pipeline_skill_promote.md  pipeline_sql_oracle_to_dm8.md
prompt-dsl-system/05_skill_registry/: BASELINE_REGISTRY_SNAPSHOT.json  CHANGELOG_CONSTITUTION_UPGRADE.md  CONSOLIDATION_CHANGELOG.md  REDUNDANCY_REPORT.md  skills.json
prompt-dsl-system/project_stacks/: README.md
prompt-dsl-system/tools/: README.md  (+167 more)
(+239 files in other folders)
